# PitchApp

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/masterofpuppets/pitchapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  NoiseGate.cpp  NoiseGate.h  PitchDetector.cpp  PitchDetector.h  native-lib.cpp
app/src/main/java/com/masterofpuppets/pitchapp/: .gitignore  MainActivity.kt
app/src/main/java/com/masterofpuppets/pitchapp/audio/: AudioEngine.kt
app/src/main/java/com/masterofpuppets/pitchapp/data/local/: PitchAppDatabase.kt  SettingsRepository.kt
app/src/main/java/com/masterofpuppets/pitchapp/data/local/converters/: Converters.kt
app/src/main/java/com/masterofpuppets/pitchapp/data/local/dao/: SoundSourceDao.kt  TuningDao.kt
app/src/main/java/com/masterofpuppets/pitchapp/model/: Transposition.kt
app/src/main/java/com/masterofpuppets/pitchapp/ui/components/: PitchTextPanel.kt
app/src/main/java/com/masterofpuppets/pitchapp/ui/screens/: AboutScreen.kt  SettingsScreen.kt  TunerScreen.kt
app/src/main/java/com/masterofpuppets/pitchapp/utils/: PitchConverter.kt
app/src/main/java/com/masterofpuppets/pitchapp/viewmodel/: MainViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/masterofpuppets/pitchapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
(+5 files in other folders)
